--- a/style.css
+++ b/style.css
@@ -6,8 +6,16 @@ body {
     margin: 0;
 }
 
+main {
+    margin-top: 4.3rem;
+}
+
 .nav {
-    background: fixed;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: 4rem;
     background-color: lightgray;
     display: flex;
     justify-content: space-between;
