--- a/style.css
+++ b/style.css
@@ -102,7 +102,7 @@ body {
 /* header */
 
 .header {
-    border: 0.5rem solid yellow;
+    /* border: 0.5rem solid yellow; */
     /* chat */
     height: auto;
     margin-top: 4rem;
@@ -132,38 +132,6 @@ body {
     display: none;
 }
 
-/* .header-banner {
-    position: relative;
-} */
-
-/* .header-banner>img {
-    display: block;
-    max-width: 100%;
-} */
-
-/* .image-wrapper {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
-    border: 1rem solid red;
-} */
-
-/* .image-wrapper img {
-    width: 100%;
-    max-height: 21.4rem;
-} */
-
-/* .inner-wrapper {
-    border: 1rem solid green;
-    position: absolute;
-    display: flex;
-    max-width: 736px;
-    padding: 24px 0 8px;
-    margin: 0 auto;
-} */
-
 .options {
     text-align: center;
     /* chat */
@@ -173,7 +141,7 @@ body {
     /* makes the li fall center */
     justify-content: center;
     gap: 0.5rem;
-    border: 0.3rem solid red;
+    /* border: 0.3rem solid red; */
     max-width: 44rem;
 }
 
@@ -232,7 +200,7 @@ body {
     flex-wrap: wrap;
     margin: auto;
     justify-content: space-between;
-    gap: 0.5rem;
+    /* gap: 0.5rem; */
 }
 
 .big-box {
@@ -243,6 +211,8 @@ body {
     max-height: 29rem;
     border: 2px solid blue;
     position: relative;
+    border-radius: 0.5rem;
+    padding: 1rem 0;
 }
 
 .big-box:hover {}
@@ -272,6 +242,18 @@ body {
 
 
 .smal-text {}
+
+
+@media(max-width: 650px) {
+    .big-box {
+        flex: 1 0 100%;
+        /* Låt varje .big-box ta upp en hel rad */
+        max-width: 100%;
+        /* Bredden på 100% för att ta upp hela raden */
+        margin-bottom: 0.5rem;
+        /* Lägg till lite mellanrum mellan .big-box på mindre skärmar */
+    }
+}
 
 /* .title-text {
     position: absolute;
