--- a/style.css
+++ b/style.css
@@ -271,8 +271,61 @@ body {
 }
 
 
-.smal-text {}
+/* .smal-box {
+    position: relative;
+    width: 25%;
+    padding-top: 25%;
 
+    border: 2px solid purple;
+}
+
+.smal-box .content {
+    border: 2px solid #284971;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url(assets/mjuksproda-hallongrottor.jpg.webp);
+    background-size: cover;
+    background-position: center;
+}
+
+.smal-box .content p {
+    border: 2px solid red;
+    color: white;
+    font-size: 1.2rem;
+    margin: 0;
+} */
+
+
+.smal-box {
+    position: relative;
+    width: 25%;
+    padding-top: 25%;
+    /* 25% av bredden för att skapa en kvadratisk container */
+    border: 2px solid green;
+    background-image: url(assets/mjuksproda-hallongrottor.jpg.webp);
+    background-size: cover;
+    background-position: center;
+    /* justify-content: center;
+    align-items: center; */
+
+}
+
+.smal-text {
+    width: 100%;
+    background-color: rgba(46, 43, 43, 20%);
+}
+
+.smal-text p {
+    margin: 0;
+    padding: 0.5rem;
+    color: white;
+    /* border: 2px solid red; */
+    width: 100%;
+
+}
 
 @media(max-width: 650px) {
     .big-box {
@@ -281,6 +334,11 @@ body {
         /* Bredden på 100% för att ta upp hela raden */
         max-width: 100%;
 
+    }
+
+    .smal-box {
+        flex: 1 0 50%;
+        max-width: 50%;
     }
 }
 
